# claws

./: configure.ac
src/: folder.c  folder.h  folderview.c  imap.c  imap_gtk.c  mh_gtk.c  prefs_folder_item.c  stock_pixmap.c  stock_pixmap.h
src/common/: defs.h
src/pixmaps/: junk.xpm  junk_hrm.xpm  junk_hrm_mark.xpm  junk_mark.xpm
src/plugins/: Makefile.am
src/plugins/spam_movetojunk/: Makefile.am  spam_movetojunk.c
